--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: inner_joy
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.6 <3.0.0'
+  sdk: ">=3.0.0 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -30,11 +30,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  cloud_firestore: ^4.12.2
+  fl_chart: ^0.64.0
+  equatable: ^2.0.4
+  path_drawing: ^1.0.1
+  path_parsing: ^1.0.1
+  http: ^0.13.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.21.0
+  firebase_auth: ^4.10.1
+  google_fonts: ^4.0.4
 
 dev_dependencies:
   flutter_test:
@@ -52,14 +60,28 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/images/Background.png
+    - assets/images/Background2.png
+    - assets/images/Background3.png
+    - assets/images/logo.png
+    - assets/images/Brain_Woman.png
+    - assets/images/profile.png
+    - assets/images/chatbot.png
+    - assets/images/phq.png
+    - assets/images/yoga.png
+    - assets/images/Joy.png
+    - assets/images/Anxiety.png
+    - assets/images/Depression.png
+    - assets/images/NextStep.png
+    - assets/images/WhyThisWay.png
+
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
